@@ -32,17 +32,17 @@
 	</scrollbar>
 	
 	<tab condition="empty{recimg1path}" name="Info" x="42%" y="14%" width="53%" height="76%" layer="2" scrollheight="{areaheight}/4">
-		<drawtextbox condition="not{isseries}++not{ismovie}" x="0" y="0" width="96%" font="{light}" fontsize="5%" color="{clrLightGray}" text="{description}" />
-		<drawimage condition="{isseries}" name="seriesposter" imagetype="image" path="{seriesposter1path}" x="0" y="1%" width="{areawidth}*0.25" height="{areawidth}*0.375" />
-		<drawimage condition="{ismovie}" name="movieposter" imagetype="image" path="{posterpath}" x="0" y="1%" width="{areawidth}*0.25" height="{areawidth}*0.375" />
-		<drawtextbox condition="{isseries}" x="0" y="0" width="96%" float="topleft" floatwidth="{width(seriesposter)}*1.1" floatheight="{height(seriesposter)}*1.1" font="{light}" fontsize="5%" color="{clrLightGray}" text="{description}" />
-		<drawtextbox condition="{ismovie}" x="0" y="0" width="96%" float="topleft" floatwidth="{width(movieposter)}*1.1" floatheight="{height(movieposter)}*1.1" font="{light}" fontsize="5%" color="{clrLightGray}" text="{description}" />
+		<drawtextbox condition="empty{seriesposter1path}++empty{posterpath}" x="0" y="0" width="96%" font="{light}" fontsize="5%" color="{clrLightGray}" text="{description}" />
+		<drawimage condition="isset{seriesposter1path}" name="seriesposter" imagetype="image" path="{seriesposter1path}" x="0" y="1%" width="{areawidth}*0.25" height="{areawidth}*0.375" />
+		<drawimage condition="isset{posterpath}" name="movieposter" imagetype="image" path="{posterpath}" x="0" y="1%" width="{areawidth}*0.25" height="{areawidth}*0.375" />
+		<drawtextbox condition="isset{seriesposter1path}" x="0" y="0" width="96%" float="topleft" floatwidth="{width(seriesposter)}*1.1" floatheight="{height(seriesposter)}*1.1" font="{light}" fontsize="5%" color="{clrLightGray}" text="{description}" />
+		<drawtextbox condition="isset{posterpath}" x="0" y="0" width="96%" float="topleft" floatwidth="{width(movieposter)}*1.1" floatheight="{height(movieposter)}*1.1" font="{light}" fontsize="5%" color="{clrLightGray}" text="{description}" />
 	</tab>
 	<tab condition="isset{recimg1path}" name="Info" x="42%" y="14%" width="53%" height="76%" layer="2" scrollheight="{areaheight}/4">
 		<drawimage condition="empty{seriesposter1path}++empty{posterpath}" name="recimg" imagetype="image" path="{recimg1path}" x="1%" y="0" width="{areawidth}*0.3" height="{areawidth}*0.3*130/174"/>
 		<drawtextbox condition="empty{seriesposter1path}++empty{posterpath}" x="0" y="0" float="topleft" floatwidth="{width(recimg)}*1.2" floatheight="{height(recimg)}*1.2" width="96%" font="{light}" fontsize="5%" color="{clrLightGray}" text="{description}" />
-		<drawimage condition="{isseries}" name="seriesposter" imagetype="image" path="{seriesposter1path}" x="0" y="1%" width="{areawidth}*0.25" height="{areawidth} * 0.375" />
-		<drawimage condition="{ismovie}" name="movieposter" imagetype="image" path="{posterpath}" x="0" y="1%" width="{areawidth}*0.25" height="{areawidth} * 0.375" />
+		<drawimage condition="isset{seriesposter1path}" name="seriesposter" imagetype="image" path="{seriesposter1path}" x="0" y="1%" width="{areawidth}*0.25" height="{areawidth} * 0.375" />
+		<drawimage condition="isset{posterpath}" name="movieposter" imagetype="image" path="{posterpath}" x="0" y="1%" width="{areawidth}*0.25" height="{areawidth} * 0.375" />
 		<drawimage condition="isset{seriesposter1path}||isset{posterpath}" imagetype="image" path="{recimg1path}" x="0" y="50%" width="{areawidth}*0.25" height="{areawidth}*0.25*130/174"/>
 		<drawtextbox condition="isset{seriesposter1path}" x="0" y="0" width="96%" float="topleft" floatwidth="{width(seriesposter)}*1.1" floatheight="{height(seriesposter)}*1.7" font="{light}" fontsize="5%" color="{clrLightGray}" text="{description}" />
 		<drawtextbox condition="isset{posterpath}" x="0" y="0" width="96%" float="topleft" floatwidth="{width(movieposter)}*1.1" floatheight="{height(movieposter)}*1.7" font="{light}" fontsize="5%" color="{clrLightGray}" text="{description}" />
